find_package(JUDY REQUIRED)
include_directories(${JUDY_INCLUDE_DIR})

# examples
add_subdirectory(01-mesh)
add_subdirectory(02-space)
add_subdirectory(03-poisson)
add_subdirectory(03-poisson-long)
add_subdirectory(04-bc-dirichlet)
add_subdirectory(04-bc-dirichlet-long)
add_subdirectory(05-bc-neumann)
add_subdirectory(05-bc-neumann-long)
add_subdirectory(06-bc-newton)
add_subdirectory(06-bc-newton-long)
add_subdirectory(07-general)
add_subdirectory(07-general-long)
add_subdirectory(08-system)
add_subdirectory(08-system-long)
add_subdirectory(09-timedep)
add_subdirectory(10-adapt)
add_subdirectory(10-adapt-long)
add_subdirectory(11-system-adapt)
add_subdirectory(11-system-adapt-long)
add_subdirectory(12-general-adapt)
add_subdirectory(12-general-adapt-long)
add_subdirectory(13-complex-adapt)
add_subdirectory(13-complex-adapt-long)
add_subdirectory(14-hcurl-adapt)
add_subdirectory(14-hcurl-adapt-long)
add_subdirectory(15-newton-elliptic-1)
add_subdirectory(16-newton-elliptic-2)
add_subdirectory(17-newton-elliptic-adapt)
add_subdirectory(17-newton-elliptic-adapt-long)
add_subdirectory(18-newton-timedep-heat)
add_subdirectory(19-newton-timedep-flame)
add_subdirectory(20-newton-timedep-ns)
add_subdirectory(21-newton-timedep-gp)
add_subdirectory(22-newton-timedep-heat-adapt)
add_subdirectory(23-heat-and-moisture-adapt)
add_subdirectory(23-heat-and-moisture-adapt-long)
add_subdirectory(24-newton-timedep-gp-adapt)
add_subdirectory(30-space-hcurl)
add_subdirectory(31-space-hdiv)
add_subdirectory(32-space-l2)
add_subdirectory(33-exact-adapt)
add_subdirectory(34-remote-computing)

if(WITH_TRILINOS)
  add_subdirectory(40-trilinos-linear)
  add_subdirectory(41-trilinos-nonlinear)
  add_subdirectory(42-trilinos-timedep)
  add_subdirectory(43-trilinos-adapt)
  add_subdirectory(44-trilinos-coupled)
endif(WITH_TRILINOS)
