# Linear problems
add_subdirectory(P01-linear)

# Nonlinear problems
add_subdirectory(P02-nonlinear)

# Time-dependent problems
add_subdirectory(P03-timedep)

# Adaptivity for linear problems
add_subdirectory(P04-linear-adapt)

# Adaptivity for nonlinear problems
add_subdirectory(P05-nonlinear-adapt)

# Adaptivity for time-dependent problems
add_subdirectory(P06-timedep-adapt)

# Eigenproblems
add_subdirectory(P07-eigen)

# FVM and DG
add_subdirectory(P08-fvm-and-dg)

# Using Trilinos
add_subdirectory(P09-trilinos)

# Miscellaneous techniques
add_subdirectory(P10-miscellaneous)
