#
# CMake for tests
#
include(common.cmake)

add_subdirectory(adapt)
add_subdirectory(calc)
add_subdirectory(hang-nodes)
add_subdirectory(judy-templates)
add_subdirectory(linear-solvers)
add_subdirectory(mesh)
add_subdirectory(mesh-loaders)
add_subdirectory(orders)
add_subdirectory(output)
add_subdirectory(quadrature)
#add_subdirectory(refmap)
add_subdirectory(shapeset)
add_subdirectory(timer)
